--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="fade-in">
-        <div class="logo">TechnoVibe Solutions Pvt. Ltd.</div>
+        <div class="logo">TechnoVibe Solutions</div>
         <nav>
             <ul>
                     <li><a href="home.html">Home</a></li>
