--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="fade-in">
-        <div class="logo"> Pvt. Ltd.</div>
+        <div class="logo"> TechnoVibe Solutions </div>
         <nav>
             <ul>
                 <ul>
