--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="fade-in">
-        <div class="logo">TechnoVibe Solutions Pvt. Ltd.</div>
+        <div class="logo">TechnoVibe Solutions </div>
         <nav>
             <ul>
                 <ul>
