--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                     
             </div>
             <div class="project">
-                <img src="/Users/janaiah/Desktop/PROJECT-1/img5.jpeg" alt="Project 3">
+                <img src="/Users/janaiah/Desktop/PROJECT-1/images 7.jpeg" alt="Project 3">
                 <h2>Healthcare web app for scheduling and patient management</h2>
                 <p>This web application was created to streamline patient management for healthcare providers.</p>
                 <p>It allows doctors and patients to schedule appointments, view medical history, and communicate securely. 
