--- a/services.html
+++ b/services.html
@@ -36,22 +36,22 @@
         <h1>Our Services</h1>
         <div class="services-container">
             <div class="service">
-                <img src="/Users/janaiah/Desktop/PROJECT-1/img1.jpeg" alt="Service 1">
+                <img src="img1.jpeg" alt="Service 1">
                 <h2>Web Development</h2>
                 <p>We create fully responsive and optimized websites that align with your business goals.</p>
             </div>
             <div class="service">
-                <img src="/Users/janaiah/Desktop/PROJECT-1/img.jpeg" alt="Service 2">
+                <img src="img.jpeg" alt="Service 2">
                 <h2>Mobile App Development</h2>
                 <p>Our mobile app development services ensure your brand reaches customers through seamless mobile experiences.</p>
             </div>
             <div class="service">
-                <img src="/Users/janaiah/Desktop/PROJECT-1/img2.jpeg" alt="Service 3">
+                <img src="img2.jpeg" alt="Service 3">
                 <h2>UI/UX Design</h2>
                 <p>We design intuitive user interfaces and experiences that make your products easy to use and visually appealing.</p>
             </div>
             <div class="service">
-                <img src="/Users/janaiah/Desktop/PROJECT-1/images.jpeg" alt="Service 3">
+                <img src="images.jpeg" alt="Service 3">
                 <h2>IOT data processing with cloud services</h2>
                 <p>We design intuitive user interfaces and experiences that make your products easy to use and visually appealing.</p>
             </div>
