--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
         <h1>Our Projects</h1>
         <div class="portfolio-container">
             <div class="project">
-                <img src="/Users/janaiah/Desktop/PROJECT-1/img4.jpeg" alt="Project 1">
+                <img src="img4.jpeg" alt="Project 1">
                 <h2>E-commerce platform for shopping</h2>
                 <p>This project is a responsive e-commerce website developed for a global retail brand. 
                 <p>It allows users to browse a wide range of products, manage shopping carts, and process payments securely. 
