--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
                 The UI/UX design focuses on user-friendliness, ensuring a seamless shopping experience across all devices.
             </div>
             <div class="project">
-                <img src="/Users/janaiah/Desktop/PROJECT-1/img5.jpeg" alt="Project 2">
+                <img src="img5.jpeg" alt="Project 2">
                 <h2>Mobile app for task management</h2>
                 <p>A mobile app designed to help users stay organized by tracking their daily tasks and goals. 
                 <p>It features task categorization, deadline reminders, progress tracking, and syncs across devices. 
@@ -42,14 +42,14 @@
                     
             </div>
             <div class="project">
-                <img src="/Users/janaiah/Desktop/PROJECT-1/images 7.jpeg" alt="Project 3">
+                <img src="images 7.jpeg" alt="Project 3">
                 <h2>Healthcare web app for scheduling and patient management</h2>
                 <p>This web application was created to streamline patient management for healthcare providers.</p>
                 <p>It allows doctors and patients to schedule appointments, view medical history, and communicate securely. 
                  <p>The project focuses on delivering a modern interface while simplifying administrative tasks.</p>
             </div>
             <div class="project">
-                <img src="/Users/janaiah/Desktop/PROJECT-1/img6.jpeg" alt="Project 4">
+                <img src="img6.jpeg" alt="Project 4">
                 <h2>Cloud-based business data management software</h2>
                 <p>A scalable cloud-based data management solution tailored to businesses.</p> 
                 <p>This system helps organizations securely store and manage large amounts of business-critical data.</p>
