--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
                 <p>We create fully responsive and optimized websites that align with your business goals.</p>
             </div>
             <div class="service">
-                <img src="img1.jpeg" alt="Service 2">
+                <img src="img.jpeg" alt="Service 2">
                 <h2>Mobile App Development</h2>
                 <p>Our mobile app development services ensure your brand reaches customers through seamless mobile experiences.</p>
             </div>
