--- a/portfolio.html
+++ b/portfolio.html
@@ -27,26 +27,26 @@
             <div class="project">
                 <img src="img4.jpeg" alt="Project 1">
                 <h2>E-commerce platform for shopping</h2>
-                 This project is a responsive e-commerce website developed for a global retail brand. 
-                 It allows users to browse a wide range of products, manage shopping carts, and process payments securely.
+                 <p>This project is a responsive e-commerce website developed for a global retail brand. 
+                 It allows users to browse a wide range of products, manage shopping carts, and process payments securely.</p>
             </div>
             <div class="project">
                 <img src="img5.jpeg" alt="Project 2">
                 <h2>Mobile app for task management</h2>
-                A mobile app designed to help users stay organized by tracking their daily tasks and goals. . 
-                The app also has a clean, minimalist design, making it intuitive and easy to use.   
+                <p>A mobile app designed to help users stay organized by tracking their daily tasks and goals. . 
+                The app also has a clean, minimalist design, making it intuitive and easy to use.</p>   
             </div>
             <div class="project">
                 <img src="images 7.jpeg" alt="Project 3">
                 <h2>Healthcare web app for scheduling and patient management</h2>
-                  This web application was created to streamline patient management for healthcare providers.
-                  The project focuses on delivering a modern interface while simplifying administrative tasks.
+                  <p>This web application was created to streamline patient management for healthcare providers.
+                  The project focuses on delivering a modern interface while simplifying administrative tasks.<p>
             </div>
             <div class="project">
                 <img src="img6.jpeg" alt="Project 4">
                 <h2>Cloud-based business data management software</h2>
-                 A scalable cloud-based data management solution tailored to businesses.
-                This system helps organizations securely store and manage large amounts of business-critical data.
+                 <p>A scalable cloud-based data management solution tailored to businesses.
+                This system helps organizations securely store and manage large amounts of business-critical data.</p>
                
             </div>
         </div>
