--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
             <div class="project">
                 <img src="img5.jpeg" alt="Project 2">
                 <h2>Mobile app for task management</h2>
-                <p>A mobile app designed to help users stay organized by tracking their daily tasks and goals. . 
+                <p>A mobile app designed to help users stay organized by tracking their daily tasks and goals.
                 The app also has a clean, minimalist design, making it intuitive and easy to use.</p>   
             </div>
             <div class="project">
