--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,8 @@
             <textarea id="message" name="message" rows="4" placeholder="Your message" required></textarea>
             
             <button type="submit">Submit</button>
+        </form>
+    </section>
    
             <footer>
                 <p>&copy; 2025 TechnoVibe Solutions Pvt. Ltd. All Rights Reserved.<br>
